# streamdata

./: README.md
.cargo/: config.toml
.github/workflows/: code.yml
crates/async-streamdata/: Cargo.toml
crates/async-streamdata/src/: lib.rs  reader.rs
crates/async-streamdata/src/reader/: async_std.rs  generic.rs  http_body.rs  quinn.rs  stream.rs  tokio.rs
crates/streamdata/: Cargo.toml
crates/streamdata/src/: buffer.rs  decoder.rs  lib.rs
crates/streamdata/src/decoder/: k8s_openapi.rs  serde_json.rs  tokio_util.rs
