[package]
name = "async-streamdata"
version = "0.2.0"
edition = "2021"
description = "Async IO data stream decoding utilitites."
license = "MIT"
repository = "https://github.com/MOZGIII/streamdata.git"
readme = "../../README.md"
keywords = ["async-io", "stream", "deserialization"]
categories = ["encoding", "network-programming"]

[dependencies]
streamdata = { version = "0.2", default-features = false, path = "../streamdata" }

async-stream = "0.3"
bytes = { version = "1", default-features = false }
futures-core = "0.3"
thiserror = "1"

tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }
async-std = { version = "1", default-features = false, features = ["std", "async-io"], optional = true }
http-body = { version = "0.4", default-features = false, features = [], optional = true }

[features]
default = ["tokio", "async-std", "http-body"]

async-std = ["dep:async-std"]
http-body = ["dep:http-body"]
tokio = ["dep:tokio"]
