[package]
name = "async-streamdata"
version = "0.3.1"
edition = "2021"
description = "Async IO data stream decoding utilitites."
license = "MIT"
repository = "https://github.com/MOZGIII/streamdata.git"
readme = "../../README.md"
keywords = ["async-io", "stream", "deserialization"]
categories = ["encoding", "network-programming"]

[dependencies]
streamdata = { version = "0.2", default-features = false, path = "../streamdata" }

async-stream = "0.3"
bytes = { version = "1", default-features = false }
futures-core = "0.3"
thiserror = "1"

async-trait = { version = "0.1", optional = true }

tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }
futures-io = { version = "0.3", default-features = false, features = ["std"], optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std", "io"], optional = true }
http-body = { version = "0.4", default-features = false, features = [], optional = true }

[features]
default = ["tokio", "futures", "http-body"]

no-async-fn-in-trait-feature = []
async-trait = ["dep:async-trait", "no-async-fn-in-trait-feature"]

async-std = ["futures"]
futures = ["dep:futures-io", "dep:futures-util"]
http-body = ["dep:http-body"]
tokio = ["dep:tokio"]
