[package]
name = "streamdata"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"

bytes = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["bytes", "serde_json"]
bytes = ["dep:bytes"]
serde_json = ["dep:serde", "dep:serde_json"]
