[package]
name = "streamdata"
version = "0.2.3"
edition = "2021"
description = "Sans-IO data stream decoding utilitites."
license = "MIT"
repository = "https://github.com/MOZGIII/streamdata.git"
readme = "../../README.md"
keywords = ["sans-io", "stream", "deserialization"]
categories = ["encoding", "network-programming"]

[package.metadata.docs.rs]
no-default-features = true
features = ["small"]

[dependencies]
tracing = "0.1"

thiserror = { version = "1", optional = true }
bytes = { version = "1", optional = true }
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
k8s-openapi = { version = "0.19", default-features = false, features = ["api"], optional = true }
tokio-util = { version = "0.7", default-features = false, features = ["codec"], optional = true }

[dev-dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }

[features]
default = ["small", "heavy"]
small = ["bytes", "serde_json", "tokio-util"]
heavy = ["k8s-openapi"]

bytes = ["dep:bytes"]

serde_json = ["dep:serde", "dep:serde_json"]
k8s-openapi = ["dep:k8s-openapi", "dep:thiserror"]
tokio-util = ["dep:tokio-util", "dep:bytes"]
